tweaked some things